--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
